bug fixing, database work

--- a/.env
+++ b/.env
@@ -1,5 +1,8 @@
 TOKEN=7756939383:AAFTc2mPeRCFBZpVBZeq0DsCW3-USdWSsfE
+MEDIA_PATH=C:/Users/Admin/Desktop/cafe_bot
 DB_USER=postgres
 DB_PASSWORD=123456789
 DB_ADDRESS=127.0.0.1
-DB_NAME=cafesmile
+DB_NAME=cafesmile680
+PORTMONE=1661751239:TEST:xEZf-8tV7-k12m-5t1D
+MANAGER=-4589019531
